test/files/neg/t11823.check
t11823.scala:7: error: implicit error;
!I e: Foo[String]
  val fooString: Foo[String] = implicitly
                               ^
t11823.scala:8: error: implicit error;
!I foo: Foo[String]
  val barString: Bar[String] = bar
                               ^
2 errors
